<resources>
    <string name="app_name">Pokemon</string>
    <string name="nome_do_pokemon">Nome do pokemon</string>
    <string name="buscar">Buscar</string>
    <string name="retornar">Retornar</string>
    <string name="favoritos">Meus favoritos</string>
    <string name="lista_pokemons">Lista de pokemons</string>
    <string name="mostrar_pokemons">Visualizar mais pokemons</string>
    <string name="fogo">Fogo</string>
    <string name="voador">Voador</string>
    <string name="sexo_masculino">♂</string>
    <string name="sexo_feminino">♀</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="trocar_senha">Trocar de senha</string>
    <string name="cadastrar">Cadastra-se</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="nick">Nick</string>
    <string name="email">Email</string>
    <string name="senha_1">Senha 1</string>
    <string name="senha_2">Senha 2</string>
    <string name="finalizar_cadastro">Finalizar cadastro</string>
    <string name="entrar">Entrar</string>
</resources>