<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magic_mint"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/persian_green"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/abc_ic_ab_back_material"
        app:title="@string/retornar"
        app:titleTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nome"
        app:layout_constraintTop_toBottomOf="@id/toolbar_report"
        />

    <EditText
        android:id="@+id/nome"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintBottom_toTopOf="@id/nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro"
        />

    <EditText
        android:id="@+id/nick"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/nick"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome"
        app:layout_constraintBottom_toTopOf="@id/email"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nick"
        app:layout_constraintBottom_toTopOf="@id/senha1"
        />

    <EditText
        android:id="@+id/senha1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/senha_1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/senha2"
        />

    <EditText
        android:id="@+id/senha2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1.5in"
        android:gravity="center"
        android:hint="@string/senha_2"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/encerramento"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/finalizar_cadastro"
        android:textStyle="bold"
        android:backgroundTint="@color/persian_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha2"
        app:cornerRadius="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>