<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magic_mint"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pokeball"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/bola"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Login"
        app:layout_constraintVertical_bias="0.80"
        />

    <EditText
        android:id="@+id/Login"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/senha"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/senha"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login"
        app:layout_constraintBottom_toTopOf="@id/esquecerSenha"
        />

    <TextView
        android:id="@+id/esquecerSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_senha"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/senha"
        />

    <TextView
        android:id="@+id/cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/esquecerSenha"
        android:layout_marginBottom="1.1in"
        />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:backgroundTint="@color/persian_green"
        app:layout_constraintTop_toBottomOf="@id/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>