<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detalhes_pokemon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magic_mint">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/persian_green"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/abc_ic_ab_back_material"
        app:title="@string/retornar"
        app:titleTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_heart_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_report"/>

    <ImageView
        android:id="@+id/ivPokemonImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_report" />

    <LinearLayout
        android:id="@+id/containerTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ivPokemonImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fogo"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voador"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/containerTypes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo_masculino"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo_feminino"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/orange"
            android:background="@color/white"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_pokemon_stat"
        app:layout_constraintTop_toBottomOf="@id/containerGender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>