<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magic_mint"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/teal_green"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/busca"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/buscar"
            android:scaleType="centerInside"
            android:src="@drawable/magnifying_glass" />

        <View
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:background="@color/black" />

        <ImageButton
            android:id="@+id/favorito"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/favoritos"
            android:scaleType="centerInside"
            android:src="@drawable/heart" />

        <View
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:background="@color/black" />

        <ImageButton
            android:id="@+id/lista"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/lista_pokemons"
            android:scaleType="centerInside"
            android:src="@drawable/list" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivPerfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_perfil"
        app:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>